prevent cell output from overflowing midcol and breaking layout

--- a/resources/stylesheets/main.css
+++ b/resources/stylesheets/main.css
@@ -29,6 +29,10 @@ textarea, input[type="text"] {
   width: 640px;
 }
 
+.code .output {
+  max-width: 640px;
+}
+
 .sheet {
   margin-left: 200px;
   margin-top: 40px;
